# TimeBandit

./: MANIFEST.in  README.md  requirements.txt  setup.cfg  simple_sim.py  state.py
bandit/: anchor.py  branch.py  clock.py  data.py  edges.py  effect.py  graph.py  identity.py  main.py  object.py  point.py  space.py  space_time.py  state.py  temporal.py  temporal_state.py  thread.py  ticker.py  time.py  update.py  util.py
docs/: OOS.md  Object.md  Object.mdx  State.md  TGE.md
docs/Article/: Object.md
docs/Documentation/: Object.md
docs/Story/: Object.md
docs/Technical/: Object.md
tests/: test_clock.py  test_graph.py  test_identity.py  test_limited_dict.py  test_object.py  test_space.py  test_state.py  test_temporal.py  test_time.py
