[metadata]
name = TimeBandit
version = 0.1.0
author = Chris Mangum
author_email = csmangum@gmail.com
description = A framework for simulating dynamic systems over time
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Dooders/TimeBandit
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.10
install_requires =
    fizicks
    temporalobject
    anarchygraph
    pydantic

[options.packages.find]
exclude =
    tests*
    docs*